--- a/travel/sass/base/_buttons.scss
+++ b/travel/sass/base/_buttons.scss
@@ -27,7 +27,7 @@
 
         &::before {
             content: " ";
-            background-image: url(../../images/arrow.svg);
+            background-image: url(../images/arrow.svg);
             display: block;
             width: 35px;
             height: 22.5px;
