--- a/travel/sass/components/_footer.scss
+++ b/travel/sass/components/_footer.scss
@@ -1,7 +1,7 @@
 footer {
     background-size: cover;
     height: 61px;
-    background-image: url(../../images/footer.jpg);
+    background-image: url(../images/footer.jpg);
     background-repeat: no-repeat;
     background-position: center bottom;
 }
