--- a/travel/sass/components/_stories.scss
+++ b/travel/sass/components/_stories.scss
@@ -4,7 +4,7 @@
     }
 
     &__background {
-        background-image: url(../../images/footer.jpg);
+        background-image: url(../images/footer.jpg);
         background-repeat: no-repeat;
         background-size: cover;
 
