--- a/travel/sass/components/_stories.scss
+++ b/travel/sass/components/_stories.scss
@@ -5,7 +5,7 @@
 
     &__background {
         background-repeat: no-repeat;
-        background-image: url(../images/footer.jpg);
+        background-image: url(../images/stories.jpg);
         background-size: cover;
 
         &-opacity {
