--- a/travel/sass/abstract/_mixins.scss
+++ b/travel/sass/abstract/_mixins.scss
@@ -4,3 +4,7 @@
     font-style: $style;
     line-height: $height;
 }
+
+@mixin media-mobile {
+    @media (max-width: $mobile-width) {@content;}
+}
