--- a/travel/sass/base/_buttons.scss
+++ b/travel/sass/base/_buttons.scss
@@ -25,6 +25,14 @@
         @extend %font-additional;
         @include font(24px, 500, normal, 31.75px);
 
+        @include media-mobile {
+            @include font(11px, 500, normal, 15px);
+            height: 30px;
+           padding-top: 10px;
+           padding-right: 15px;
+        padding-left: 10px;
+        }
+
         &::before {
             content: " ";
             background-image: url(../images/arrow.svg);
@@ -32,6 +40,14 @@
             width: 35px;
             height: 22.5px;
             margin: 10px 10px 9.5px 5px;
+
+            @include media-mobile {
+                background-image: url(../images/arrow-mobile.svg);
+                display: block;
+                width: 8.75px;
+                height: 5.6px;
+                 margin: 10px 4px 9.5px 5px;
+            }
         }
     }
 }
@@ -39,10 +55,18 @@
 .preview__button {
     position: absolute;
     font-size: 24px;
-    width: 228px;
     right: 18px;
     top: 18px;
     bottom: 18px;
     padding: 13.5px 32.5px;
     z-index: 2;
+
+    @include media-mobile {
+        @include font(11px, 500, normal, 15px);
+        width: 92px;
+        right: 9px;
+        top: 9px;
+        bottom: 9px;
+        padding: 7.5px 9px;
+    }
 }
