--- a/travel/sass/layouts/_wrapper.scss
+++ b/travel/sass/layouts/_wrapper.scss
@@ -1,4 +1,8 @@
 .wrapper {
     max-width: $content-width;
     margin: auto;
+    @include media-mobile {
+        padding: 0 15px;
+        margin: 0;
+    }
 }
