--- a/travel/sass/base/_humburger.scss
+++ b/travel/sass/base/_humburger.scss
@@ -1,33 +1,16 @@
-%humburger-line {
-    display: inline-block;
-    position: absolute;
-    background-color: $color-white;
-    border-radius: 5px;
-    width: 100%;
-    height: 2.67px;
-    content: "";
+.burger {
+ display: inline-block;
+    cursor: pointer;
+    z-index: 5;
+    padding-bottom: 7px;
+    margin-right: 9px;
 }
 
-.humburger {
-    display: inline-block;
-    position: relative;
-    width: 26.25px;
-    height: 10.67px;
-
-    &::before {
-        @extend %humburger-line;
-        top: 0;
-        right: 0;
-    }
-
-      &::after {
-        @extend %humburger-line;
-        bottom: 0;
-        right: 0;
-    }
-
-    &__line {
-        @extend %humburger-line;      
-        top: 16px;
-    }
+.burger-bar{
+     width: 26px;
+    height: 2.6px;
+   background-color: $color-white;
+   border-radius: 5px;
+    margin: 5px 0;
+    transition: 0.3s;
 }
