--- a/travel/sass/style.css
+++ b/travel/sass/style.css
@@ -582,32 +582,21 @@ p {
   }
 }
 
-.humburger__line, .humburger::after, .humburger::before {
+.burger {
   display: inline-block;
-  position: absolute;
-  background-color: #FFFFFF;
-  border-radius: 5px;
-  width: 100%;
-  height: 2.67px;
-  content: "";
+  cursor: pointer;
+  z-index: 5;
+  padding-bottom: 7px;
+  margin-right: 9px;
 }
 
-.humburger {
-  display: inline-block;
-  position: relative;
-  width: 26.25px;
-  height: 10.67px;
-}
-.humburger::before {
-  top: 0;
-  right: 0;
-}
-.humburger::after {
-  bottom: 0;
-  right: 0;
-}
-.humburger__line {
-  top: 16px;
+.burger-bar {
+  width: 26px;
+  height: 2.6px;
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  margin: 5px 0;
+  transition: 0.3s;
 }
 
 .wrapper {
@@ -711,11 +700,11 @@ header {
   }
 }
 
-.humburger {
+.burger {
   display: none;
 }
 @media (max-width: 390px) {
-  .humburger {
+  .burger {
     display: inline-block;
     margin-right: 8px;
   }
@@ -830,6 +819,7 @@ input {
 @media (max-width: 390px) {
   .steps__icons-last {
     align-items: flex-end;
+    text-align: right;
   }
 }
 .steps__icons-square {
@@ -873,7 +863,7 @@ input {
 }
 @media (max-width: 390px) {
   .steps__text-last {
-    margin-left: 45px;
+    margin-left: 43px;
   }
 }
 
@@ -947,12 +937,6 @@ input {
   background-color: #F2785C;
   opacity: 1;
 }
-@media (max-width: 390px) {
-  .destinations .dot {
-    width: 8px;
-    height: 8px;
-  }
-}
 .destinations__button {
   text-align: center;
   padding-top: 40px;
@@ -987,10 +971,45 @@ input {
 .destinations__text-mobile span {
   text-transform: uppercase;
   color: #FFFFFF;
-  font-size: 32px;
+  font-size: 20px;
   font-weight: 500;
   font-style: normal;
-  line-height: 42px;
+  line-height: 26.5px;
+}
+.destinations__arrow-left {
+  position: absolute;
+  z-index: 5;
+  top: 90px;
+  left: 7px;
+}
+.destinations__arrow-right {
+  position: absolute;
+  z-index: 5;
+  top: 92px;
+  left: 332px;
+}
+.destinations__dots-mobile {
+  position: absolute;
+  z-index: 5;
+  top: 190px;
+  left: 162px;
+  width: 36px;
+  display: flex;
+  justify-content: space-between;
+}
+.destinations .dot {
+  border: none;
+  background-color: #F2785C;
+  opacity: 0.5;
+  width: 8px;
+  height: 8px;
+  padding: 0;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.destinations .dot--active {
+  background-color: #F2785C;
+  opacity: 1;
 }
 
 .stories__wrapper {
@@ -1062,6 +1081,7 @@ input {
     font-weight: 700;
     font-style: normal;
     line-height: 11px;
+    margin-top: -20px;
   }
 }
 .stories__button {
