--- a/travel/sass/components/_destination.scss
+++ b/travel/sass/components/_destination.scss
@@ -139,7 +139,7 @@
         justify-content: space-between;
     }
 
-    .dot {
+    .dot-mobile {
         border: none;
         background-color: $color-main;
         opacity: 0.5;
@@ -150,7 +150,7 @@
         cursor: pointer;
         @extend %transition;
 
-        &--active {
+        &-mobile--active {
             background-color: $color-main;
             opacity: 1;
         }
