--- a/travel/sass/components/_stories.scss
+++ b/travel/sass/components/_stories.scss
@@ -21,27 +21,33 @@
         display: flex;
         padding-top: 30px;
         column-gap: 40px;
-          @include media-mobile {
-             column-gap: 10px;
-              padding-top: 0px;
-              padding-bottom: 10px; 
+
+        @include media-mobile {
+            column-gap: 10px;
+            padding-top: 0px;
+            padding-bottom: 15px;
         }
     }
-&__inner-last {
-          @include media-mobile {
-              padding-bottom: 5px; 
+
+    &__inner-last {
+        @include media-mobile {
+            padding-bottom: 10px;
         }
     }
-      &__inner__content {
-          @include media-mobile {
-              padding-top: 5px;
+
+    &__inner__content {
+        @include media-mobile {
+            display: flex;
+            flex-direction: column;
+            padding-top: 5px;
         }
-      }
+    }
 
     &__title {
         padding-bottom: 40px;
-           @include media-mobile {
-         padding-bottom: 10px;
+
+        @include media-mobile {
+            padding-bottom: 10px;
         }
     }
 
@@ -58,27 +64,29 @@
     &__link {
         color: $color-buttons;
         @include font(20px, 700, normal, 24px);
-          @include media-mobile {
-          @include font(9px, 700, normal, 11px); 
-          margin-top: -20px;
+
+        @include media-mobile {
+            @include font(9px, 700, normal, 11px);
         }
     }
 
     &__button {
         padding-top: 40px;
         padding-bottom: 40px;
-          @include media-mobile {
-        padding-top: 0px;
-        padding-bottom: 13px; 
+
+        @include media-mobile {
+            padding-top: 0px;
+            padding-bottom: 13px;
         }
     }
 
     &__text {
-          @include media-mobile {
+        @include media-mobile {
             display: none;
         }
     }
-   &__mobile-text {
+
+    &__mobile-text {
         display: none;
 
         @include media-mobile {
