feat:added some changes

--- a/travel/sass/components/_footer.scss
+++ b/travel/sass/components/_footer.scss
@@ -1,51 +1,59 @@
 footer {
-    background-size: cover;
-    height: 61px;
-    background-image: url(../images/footer.jpg);
-    background-repeat: no-repeat;
-    background-position: center bottom;
-      @include media-mobile {
-          background-image: url(../images/footer-mobile.jpg);  
-          height: 65px;
-        }
+  background-size: cover;
+  height: 61px;
+  background-image: url(../images/footer.jpg);
+  background-repeat: no-repeat;
+  background-position: center bottom;
+
+  @include media-mobile {
+    background-image: url(../images/footer-mobile.jpg);
+    height: 65px;
+    width: fit-content;
+  }
 }
 
 .footer {
-    width: 729px;
+  width: 729px;
+  display: flex;
+  height: 33.65px;
+  justify-content: space-between;
+
+  @include media-mobile {
+    width: 350px;
+  }
+
+  &__wrapper {
+    padding-top: 18px;
     display: flex;
-    height: 33.65px;
+    justify-content: end;
+
+    @include media-mobile {
+      padding-top: 15px;
+      width: 390px;
+    }
+  }
+
+  &__text {
+    color: $color-white;
+    @include font(16px, 500, normal, 21.17px);
+    @extend %font-additional;
+    width: 260px;
+    height: 21px;
+    align-items: center;
+    padding-top: 6.3px;
+
+    @include media-mobile {
+      display: none;
+    }
+  }
+
+  &__icons {
+    display: flex;
     justify-content: space-between;
- @include media-mobile {
-          width: 350px;
-        }
-    &__wrapper {
-        padding-top: 18px;
-        display: flex;
-        justify-content: end;
-           @include media-mobile {
-         padding-top: 15px;
-        }
-    }
+    width: 141px;
 
-    &__text {
-        color: $color-white;
-        @include font(16px, 500, normal, 21.17px);
-        @extend %font-additional;
-        width: 260px;
-        height: 21px;
-        align-items: center;
-        padding-top: 6.3px;
-        @include media-mobile {
-          display: none;
-        }
+    @include media-mobile {
+      margin: 0 auto;
     }
-
-    &__icons {
-        display: flex;
-        justify-content: space-between;
-        width: 141px; 
-        @include media-mobile {
-          margin: 0 auto;
-        }
-    }
+  }
 }
