--- a/travel/sass/base/_normalize.scss
+++ b/travel/sass/base/_normalize.scss
@@ -20,6 +20,7 @@ html {
 
 body {
   margin: 0;
+   width: fit-content;
 }
 
 /* HTML5 display definitions
@@ -604,3 +605,4 @@ ul {
 * {
   box-sizing: border-box;
 }
+
