--- a/travel/sass/base/_normalize.scss
+++ b/travel/sass/base/_normalize.scss
@@ -21,6 +21,8 @@ html {
 body {
   margin: 0;
    width: fit-content;
+   overflow-x: hidden;
+   overflow-y: auto;
 }
 
 /* HTML5 display definitions
