feat:added widht to sections

--- a/travel/sass/components/_footer.scss
+++ b/travel/sass/components/_footer.scss
@@ -8,6 +8,7 @@ footer {
   @include media-mobile {
     background-image: url(../images/footer-mobile.jpg);
     height: 65px;
+    width: 390px;
   }
 }
 
