--- a/travel/sass/style.css
+++ b/travel/sass/style.css
@@ -12,9 +12,7 @@ html {
  */
 body {
   margin: 0;
-  width: fit-content;
   overflow-x: hidden;
-  overflow-y: auto;
 }
 
 /* HTML5 display definitions
@@ -684,6 +682,7 @@ header {
   header {
     background-image: url(../images/main-mobile.jpg);
     height: 251px;
+    width: 390px;
   }
 }
 
@@ -815,7 +814,6 @@ header {
     position: fixed;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(41, 41, 41, 0.6);
     overflow: hidden;
   }
 }
@@ -1133,6 +1131,7 @@ input {
 @media (max-width: 390px) {
   .stories__background {
     background-image: url(../images/stories-mobile.jpg);
+    width: 390px;
   }
 }
 .stories__background-opacity {
@@ -1234,6 +1233,7 @@ footer {
   footer {
     background-image: url(../images/footer-mobile.jpg);
     height: 65px;
+    width: 390px;
   }
 }
 
